--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "snpick"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 
 [dependencies]
 bio = "2.0.3"
-rayon = "1.7.0"
-clap = { version = "4.1.8", features = ["derive"] }
-indicatif = "0.17.3"
-chrono = "0.4"
-sysinfo = "0.29.11"
+rayon = "1.10.0"
+clap = { version = "4.5.21", features = ["derive"] }
+indicatif = "0.17.9"
+chrono = "0.4.38"
+sysinfo = "0.32.0"
+twox-hash = "2.0.1"
