--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,6 @@ version = "1.0.0"
 edition = "2021"
 
 [dependencies]
-nalgebra = "0.33.2"
 bio = "2.0.3"
 rayon = "1.10.0"
 clap = { version = "4.5.21", features = ["derive"] }
@@ -12,3 +11,6 @@ indicatif = "0.17.9"
 chrono = "0.4.38"
 sysinfo = "0.32.0"
 twox-hash = "2.0.1"
+
+[patch.crates-io]
+nalgebra = "0.33.2"
